@@ -19,6 +19,14 @@ has major_version => (
     default => sub { $ENV{M} || $_[0]->payload->{major_version} || 1 }
 );
 
+# skip these dependencies
+has skip_deps => (
+    is  => 'ro',
+    isa => 'Str',
+    lazy => 1,
+    default => sub { $_[0]->payload->{skip_deps} || '' }
+);
+
 sub configure {
     my $self = shift;
 
@@ -44,11 +52,14 @@ sub configure {
         'major' => $self->major_version
     }]);
 
+    $self->add_plugins([ 'AutoPrereqs' => {
+        'skip' => $self->skip_deps
+    }]);
+
     $self->add_plugins(qw/
         NextRelease
         PkgVersion
         PickyPodWeaver
-        AutoPrereqs
         MetaJSON
     /);
 
@@ -147,6 +158,9 @@ will be suppressed.
 
 If you provide a value to the C<major_version> option then it will be passed
 to the C<AutoVersion> Plugin (as the C<major> attribute).
+
+If you provide a value to the C<skip_deps> option then it will be passed to
+the C<AutoPrereqs> Plugin (as the C<skip> attribute).
 
 =head1 TIPS
 
